<resources>
    <string name="app_name">FinalProject</string>
    <string name="title_agent">Agents</string>
    <string name="title_agent_detailed">Agent\'s Info</string>
    <string name="title_map">Maps</string>
    <string name="title_weapon">Weapons</string>
    <string name="title_skin">Skins</string>
    <string name="description_placeholder">Click on the ability icon to know more about it</string>
    <!--contact us-->
    <string name="contact_us">Contact us</string>
    <string name="call_us">call us</string>
    <string name="message_us">message us</string>
    <string name="email_us">email us</string>
    <string name="email">wissam.alsaub01@stclairconnect.ca</string>
    <string name="subject">Question</string>
    <string name="email_body">I would like to ask about </string>
    <string name="phone_number">2269614099</string>
    <string name="sms_body">I would like to ask about </string>
    <!--settings-->
    <string name="settings">Settings</string>

    <!-- Preference Titles -->
    <string name="currency">Currency</string>
    <string name="animation">Animation</string>
    <string name="text_size">Text size</string>

    <!-- Animation Preferences -->
    <string name="ability_text_size_title">Ability description text size</string>

    <!-- Animation Preferences -->
    <string name="animation_title">Toggle the animation on/off</string>
    <string name="animation_summary_on">Now there will be animation when loading the cards</string>
    <string name="animation_summary_off">Now there will be no animation when loading the cards</string>

    <!-- Currency Preferences -->
    <string name="currency_title">Show price currency</string>
    <string name="currency_summary_on">Now the skin prices will be in Canadian dollars</string>
    <string name="currency_summary_off">Now the skin prices will be in Valorant points</string>

    <!--credits-->
    <string name="credits">Credits</string>
    <string name="wissam">Wissam Al Saub</string>
    <string name="dalton">Dalton Virtue</string>
    <string name="cai">Câi Filiault</string>
    <string name="author">Authors:</string>
    <string name="instructor">Instructor:</string>
    <string name="api">This app uses Valorant API (https://valorant-api.com/) to retrieve all the data related to the game Valorant.</string>
    <string name="api_button">Check Valorant API</string>
    <string name="valorant_button">Check Game Site</string>
    <string name="valorant_api_site">https://valorant-api.com/</string>
    <string name="valorant_site">https://playvalorant.com/</string>

</resources>