<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

   <!-- <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/currency">


        <SwitchPreferenceCompat
            app:key="currency_select"
            app:summaryOff="@string/currency_summary_off"
            app:summaryOn="@string/currency_summary_on"
            app:title="@string/currency_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/animation">


        <SwitchPreferenceCompat
            app:key="animation_toggle"
            app:defaultValue="true"
            app:summaryOff="@string/animation_summary_off"
            app:summaryOn="@string/animation_summary_on"
            app:title="@string/animation_title" />

    </PreferenceCategory>

</PreferenceScreen>