<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_agents">
    <fragment
        android:id="@+id/navigation_agents"
        android:name="com.example.finalproject.UI.AgentsFragment"
        android:label="@string/title_agent"
        tools:layout="@layout/fragment_agents" />
    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.finalproject.UI.Maps.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/navigation_weapons"
        android:name="com.example.finalproject.UI.WeaponsFragment"
        android:label="@string/title_weapon"
        tools:layout="@layout/fragment_weapons" />
    <fragment
        android:id="@+id/navigation_skins"
        android:name="com.example.finalproject.UI.SkinsFragment"
        android:label="@string/title_skin"
        tools:layout="@layout/fragment_skins" />
</navigation>